@@ -120,20 +120,21 @@ define('ACTION_ENABLE', 3);
 define('ACTION_DISABLE', 4);
 define('ACTION_DUPLICATE', 5);
 define('ACTION_EXPORT', 6);
-define('ACTION_CANCEL', 7);
-define('ACTION_REAPPLY', 8);
-define('ACTION_PUBLISH', 9);
-define('ACTION_UNPUBLISH', 10);
-define('ACTION_LOCK', 11);
-define('ACTION_UNLOCK', 12);
-define('ACTION_ASSOCIATE', 13);
-define('ACTION_DISASSOCIATE', 14);
-define('ACTION_RUNNOW', 15);
-define('ACTION_CLEAR_STATS', 16);
-define('ACTION_SYNC', 17);
-define('ACTION_FULLSYNC', 18);
-define('ACTION_QUICKSYNC', 19);
-define('ACTION_CHANGE', 20);
+define('ACTION_IMPORT', 7);
+define('ACTION_CANCEL', 8);
+define('ACTION_REAPPLY', 9);
+define('ACTION_PUBLISH', 10);
+define('ACTION_UNPUBLISH', 11);
+define('ACTION_LOCK', 12);
+define('ACTION_UNLOCK', 13);
+define('ACTION_ASSOCIATE', 14);
+define('ACTION_DISASSOCIATE', 15);
+define('ACTION_RUNNOW', 16);
+define('ACTION_CLEAR_STATS', 17);
+define('ACTION_SYNC', 18);
+define('ACTION_FULLSYNC', 19);
+define('ACTION_QUICKSYNC', 20);
+define('ACTION_CHANGE', 21);
 
 /* used both for polling and reindexing */
 define('POLLER_ACTION_SNMP', 0);
