@@ -240,6 +240,14 @@ $settings['path'] = array(
 		'install_check'    => 'writable',
 		'install_optional' => true
 	),
+	'path_boost_log' => array(
+		'friendly_name' => __('Boost Debug Log'),
+		'description'   => __('This is the Log file where Boost will write its information to.  It much be located in the same directory as the Cacti Log file.'),
+		'method'        => 'filepath',
+		'file_type'     => 'ascii',
+		'default'       => '',
+		'max_length'    => '255'
+	),
 	'pollerpaths_header' => array(
 		'friendly_name' => __('Alternate Poller Path'),
 		'collapsible'   => 'true',
@@ -2258,13 +2266,11 @@ $settings['boost'] = array(
 		'method'        => 'checkbox',
 		'default'       => ''
 	),
-	'path_boost_log' => array(
-		'friendly_name' => __('Boost Debug Log'),
-		'description'   => __('If this field is non-blank, Boost will log RRDUpdate output from the boost poller process. WARNING: This setting significantly affects the boost runtime'),
-		'method'        => 'filepath',
-		'file_type'     => 'ascii',
-		'default'       => '',
-		'max_length'    => '255'
+	'boost_debug_enabled' => array(
+		'friendly_name' => __('Enable Boost Debugging'),
+		'description'   => __('If set, Boost will log debug information directly to the Boost log file.  Please note, enabling can cause a high I/O rate on the local file system.'),
+		'method'        => 'checkbox',
+		'default'       => ''
 	),
 	'boost_png_header' => array(
 		'friendly_name' => __('Image Caching'),
