@@ -88,7 +88,7 @@ function snmpagent_global_settings_update() {
 	$mc->object('boostApplRrdUpdateMaxRunTime')->set(read_config_option('boost_rrd_update_max_runtime', true));
 	$mc->object('boostApplRrdUpdateRedirect')->set((read_config_option('boost_redirect', true) == 'on') ? 1 : 2);
 	$mc->object('boostApplImageCacheEnabled')->set((read_config_option('boost_png_cache_enable', true) == 'on') ? 1 : 2);
-	$mc->object('boostApplLoggingEnabled')->set((read_config_option('path_boost_log', true) == true) ? 1 : 2);
+	$mc->object('boostApplLoggingEnabled')->set((read_config_option('boost_debug_enabled', true) == 'on') ? 1 : 2);
 	$mc->object('boostApplLastUpdate')->set(time());
 }
 
